--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1519,6 +1519,10 @@ nav ul li img {
 .login-body-header-text{
   font-size: 20px;
   font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
 }
 
 #login-email,
@@ -1542,6 +1546,14 @@ nav ul li img {
     180deg,
     rgb(167, 185, 255) 0%,
     rgb(166.9, 146.98, 255) 100%
+  );
+}
+
+#btnlogin:hover {
+  background: linear-gradient(
+      180deg,
+      rgb(166.9, 146.98, 255) 0%,
+      rgb(167, 185, 255) 100%
   );
 }
 
@@ -1729,6 +1741,25 @@ cssCopy code.login-img-container {
     rgb(166.9, 146.98, 255) 100%
   );
 }
+
+#btnregister:hover {
+  background: linear-gradient(
+      180deg,
+      rgb(166.9, 146.98, 255) 0%,
+      rgb(167, 185, 255) 100%
+  );
+}
+
+.error-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.error-text label {
+  text-align: center;
+}
+
 .textbtnregister { /* Added styles for the register button text */
   font-family: "League Spartan", Helvetica;
   font-weight: 400;
