--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1732,7 +1732,8 @@ cssCopy code.login-img-container {
 #register-email,
 #register-password,
 #register-confirm-password,
-#register-username { /* Added styles for the new input field */
+#register-username,
+#register-phone-number { /* Added styles for the new input field */
   box-shadow: inset 0px 0px 10px #00000040;
   width: 260px;
   height: 16px;
@@ -1838,7 +1839,8 @@ input[type="Password"] {
   #register-email,
   #register-password,
   #register-confirm-password,
-  #register-username {
+  #register-username,
+  #register-phone-number {
     width: 400px;
     margin: 12px;
     padding: 20px;
@@ -1868,4 +1870,34 @@ input[type="Password"] {
   .image-wrappergoogle img{
     width: 30px;
   }
+}
+
+/* Additional styles for the dropdown menu */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
