--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2143,7 +2143,7 @@ label {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: transparent;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -2151,13 +2151,13 @@ label {
 
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 16px;
   text-decoration: none;
   display: block;
 }
 
 .dropdown-content a:hover {
-  background-color: #f1f1f1;
+  background-color: transparent;
 }
 
 .dropdown:hover .dropdown-content {
