--- a/public/css/style.css
+++ b/public/css/style.css
@@ -836,6 +836,10 @@ body {
   color: #ffffff;
 }
 
+.select-return-label {
+  color: white;
+}
+
 @media screen and (max-width: 767px) {
   .list-flight-body {
     min-height: 700px;
