--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,6 +64,11 @@ body {
   padding: 1% 2%;
 }
 
+.search-flight-nav ul li a:hover{
+  text-decoration: none;
+  color: #f1f1f1;
+}
+
 .logo a {
   color: #605ff1;
   margin-left: 10px;
@@ -74,9 +79,19 @@ body {
   font-size: 30px;
 }
 
-.logo-white {
-  display: flex;
-  flex-direction: row;
+.logo-white a {
+  font-weight: bold;
+  color: #ffffff;
+  margin: 20px;
+  font-family: "Lemon";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+}
+
+.logo-white a:hover {
+  text-decoration: none;
+  color: #f1f1f1;
 }
 
 .logo-white a {
@@ -2220,22 +2235,25 @@ label {
 }
 
 .dropdown-content {
+  border-radius: 20px;
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
+  background-color: transparent;
+  width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  text-align: center;
 }
 
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
+  color: #605ff1;
+  padding: 16px;
   text-decoration: none;
   display: block;
 }
 
 .dropdown-content a:hover {
+  border-radius: 20px;
   background-color: #f1f1f1;
 }
 
