--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,6 +120,40 @@ body {
   color: #ffffff;
 }
 
+/* Additional styles for the dropdown menu */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  border-radius: 20px;
+  display: none;
+  position: absolute;
+  background-color: transparent;
+  width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  text-align: center;
+}
+
+.dropdown-content a {
+  color: #605ff1;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+  font-size: 20px;
+}
+
+.dropdown-content a:hover {
+  border-radius: 20px;
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 .index-header {
   align-items: center;
   justify-content: center;
@@ -257,6 +291,20 @@ body {
 }
 
 @media screen and (max-width: 550px) {
+  .dropdown-content {
+    border-radius: 15px;
+    width: 70px;
+  }
+  
+  .dropdown-content a {
+    padding: 10px;
+    font-size: 14px;
+  }
+  
+  .dropdown-content a:hover {
+    border-radius: 15px;
+  }
+
   .index-text {
     font-size: 20px;
   }
@@ -2272,39 +2320,6 @@ label {
 #cancel-payment {
   background-color: #f44336;
   color: white;
-}
-
-/* Additional styles for the dropdown menu */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  border-radius: 20px;
-  display: none;
-  position: absolute;
-  background-color: transparent;
-  width: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  text-align: center;
-}
-
-.dropdown-content a {
-  color: #605ff1;
-  padding: 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  border-radius: 20px;
-  background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
 }
 
 .popup {
